--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
+
 server:
   port: 8081
-spring:
-  datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://127.0.0.1:5432/proyecto
-    username: postgres
-    password: admin12345
-  jpa:
-    show-sql: true
-    database-platform: org.hibernate.dialect.PostgreSQL95Dialect
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/proyecto
+spring.datasource.username=postgres
+spring.datasource.password=admin12345
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
